discord-frontend/hartex-discord-entitycache-test/tests/ui/expected_identifier.stderr
error: expected identifier
  --> tests/ui/expected_identifier.rs:27:14
   |
27 |     #[entity(=)]
   |              ^
